...
  @override
  Widget build(BuildContext context) {
    return ModelForm(
      title: widget.name,
      avatar: _genericSupplyType?.icon ?? Symbols.medication_rounded,
      submitButtonLabel: t.add,
      submitButtonKey: const ValueKey('newGenericItemAdd'),
      isFormValid: _isFormValid,
      saveChanges: _addItem,
      closeAll: _closeAll,
      fields: [
        FormDropdownField<GenericSupplyType>(
          value: _genericSupplyType,
...
          onChanged: (value) => setState(() => _genericSupplyType = value),
          label: t.supplyType,
        ),
        FormTextField(
          controller: _amountController,
          label: t.amount,
          fieldKey: const ValueKey('newGenericItemAmount'),
          onChanged: _refresh,
          inputType: TextInputType.number,
          regexFormatter: RegexPatterns.intNumber,
        ),
      ],
    );
...
